@@ -55,6 +55,7 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
@@ -230,7 +231,7 @@ public class BaseSubscribeAction extends RhnLookupDispatchAction {
                             "basesub.jsp.unableToLookupSystemDefaultChannelWithParams",
                             String.join(", ", skippedServers.stream()
                                     .map(s -> "'" + s.getName() + "'")
-                                    .toList()), oldBaseChannelMessage);
+                                    .collect(Collectors.toList())), oldBaseChannelMessage);
                     msgs.add(ActionMessages.GLOBAL_MESSAGE, actionMessage);
                     strutsDelegate.saveMessages(request, msgs);
 
