@@ -65,6 +65,7 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.TimeZone;
+import java.util.stream.Collectors;
 
 import spark.ModelAndView;
 import spark.Request;
@@ -187,12 +188,12 @@ public class AnsibleController {
         if (pathType.equalsIgnoreCase(AnsiblePath.Type.PLAYBOOK.getLabel())) {
             paths = AnsibleManager.listAnsiblePlaybookPaths(minionServerId, user).stream()
                     .map(AnsiblePathJson::new)
-                    .toList();
+                    .collect(Collectors.toList());
         }
         else {
             paths = AnsibleManager.listAnsibleInventoryPaths(minionServerId, user).stream()
                     .map(AnsiblePathJson::new)
-                    .toList();
+                    .collect(Collectors.toList());
         }
         return result(res, success(paths), new TypeToken<>() { });
     }
@@ -209,7 +210,7 @@ public class AnsibleController {
         long minionServerId = Long.parseLong(req.params("minionServerId"));
         List<AnsiblePathJson> paths = AnsibleManager.listAnsiblePaths(minionServerId, user).stream()
                 .map(AnsiblePathJson::new)
-                .toList();
+                .collect(Collectors.toList());
         return result(res, success(paths), new TypeToken<>() { });
     }
 
