@@ -36,6 +36,7 @@ import com.google.gson.reflect.TypeToken;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 import spark.Request;
 import spark.Response;
@@ -102,7 +103,7 @@ public class ActivationKeysController {
                             group.setBase(b);
                             return group;
                         })
-                        .toList()
+                        .collect(Collectors.toList())
         ), new TypeToken<>() { });
     }
 
