@@ -21,6 +21,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 
@@ -78,7 +79,7 @@ public class SaltMinionJson {
                 fromFingerprints(fp.getDeniedMinions(), sids, STATE_DENIED, isVisible),
                 fromFingerprints(fp.getRejectedMinions(), sids, STATE_REJECTED, isVisible),
                 fromFingerprints(fp.getUnacceptedMinions(), sids, STATE_PENDING, isVisible)
-        ).flatMap(Function.identity()).toList();
+        ).flatMap(Function.identity()).collect(Collectors.toList());
     }
 
     /**
